<resources>
    <string name="MoviUQ">MoviUQ</string>

    <!-- WELCOME -->
    <string name="lema">Bienvenido a MoviUQ</string>
    <string name="lemasub">Comparte, Viaja y Ahorra</string>

    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_registrar">Registrarse</string>

    <!-- lOGIN -->
    <string name="inicio_De_sesion">Inicio de Sesión</string>
    <string name="olvidar_contraseña">¿Olvidó su contraseña?</string>
    <string name="log_hint_correo">Ingresa Correo Institucional</string>
    <string name="log_hint_pass">Ingresa contraseña</string>
    <string name="log_hint_pass_confirm">Confirma contraseña</string>
    <string name="log_btn_iniciar">Iniciar</string>
    <string name="opcioninicio">ó inicia con tu cuenta:</string>

    <!-- SIGN -->
    <string name="registro">Registro</string>
    <string name="sig_btn_registrar">Registrar</string>

    <!-- Home -->
    <string name="home_menu">Inicio</string>
    <string name="viajes">Viajes</string>
    <string name="solicitud">Solicitud</string>
    <string name="chats">Chats</string>
    <string name="perfil">Perfil</string>


    <!-- CREATE PROFILE -->
    <string name="Crea_tu_perfil">Crea tu perfil</string>
    <string name="creat_prof_hint_foto">Selecciona una foto para tu perfil</string>
    <string name="creat_prof_hint_nombre">Ingresa tu nombre</string>
    <string name="creat_prof_hint_apellido">Ingresa tus apellidos</string>
    <string name="creat_prof_btn_continuar">Continuar</string>
    <string name="creat_prof_hint_edad">Ingresa tu edad</string>
    <string name="creat_prof_hint_numero">Ingresa tu numero de celular</string>
    <string name="creat_prof_hint_city">Ingresa tu ciudad actual</string>

    <!-- Notification -->
    <string name="Notificaciones">Notificaciones</string>

    <!-- CREATE OFFER -->
    <string name="Crea_tu_oferta">Crea Oferta de Viaje</string>
    <string name="creat_offer_desc">Descripción *</string>
    <string name="creat_offer_hint_desc">Descripción del viaje</string>
    <string name="creat_offer_startpoint">Lugar de partida *</string>
    <string name="creat_offer_endpoint">Destino *</string>
    <string name="creat_offer_see_map">Visualización del mapa</string>
    <string name="creat_offer_type_vehicle">Tipo de Vehículo *</string>
    <string name="creat_offer_type_vehicle_car">Carro</string>
    <string name="creat_offer_type_vehicle_moto">Moto</string>
    <string name="creat_offer_seats">Cupos *</string>
    <string name="creat_offer_number_hint_seats">0</string>
    <string name="creat_offer_date">Fecha del Viaje *</string>
    <string name="creat_offer_hour">Hora del Viaje</string>
    <string name="creat_offer_getDate">DD/MM/AA</string>
    <string name="creat_offer_getHour">00:00 M</string>
    <string name="creat_offer_condition">Condiciones de Viaje</string>
    <string name="creat_offer_condition_fumar">Fumar</string>
    <string name="creat_offer_condition_musica">Música</string>
    <string name="creat_offer_condition_hablar">Hablar</string>
    <string name="creat_offer_condition_comida">Comida</string>
    <string name="creat_offer_condition_mascota">Mascotas</string>
    <string name="creat_offer_post_offer">Publicar Viaje</string>

    <string name="creat_offer_click_star">De</string>
    <string name="creat_offer_click_end">A</string>

    <!-- OFFER TRAVEL-->
    <string name="offerTravel_title">Viajes</string>

    <!-- My Offer list-->
    <string name="MyOfferList">Mis Viajes</string>

    <!-- Request -->
    <string name="Requests">Solicitudes</string>
    <string name="Requests_title">Crea Solicitud</string>

    <!-- Profile -->
    <string name="Perfil">Perfil</string>
    <string name="prof_mis_solicitudes">Mis solicitudes</string>
    <string name="prof_mis_viajes">Mis viajes</string>
    <string name="prof_editar_perfil">Editar perfil</string>
    <string name="prof_contactenos">Contactenos</string>
    <string name="prof_cerrar_sesion">Cerrar sesion</string>

    <!-- My Request list -->
    <string name="MyRequestsList">Mis Solicitudes</string>

    <!-- DETAIL OFFER -->
    <string name="detail_offer_title">De - A</string>
    <string name="detail_offer_info">Información del Viaje</string>
    <string name="creat_detail_offer_type_vehicle">Vehículo: Carro</string>
    <string name="creat_detail_offer_seats">Cupos: 0</string>
    <string name="creat_detail_offer_date">Fecha: dd/mm/yyyy</string>
    <string name="creat_detail_offer_hour">Hora: 00:00</string>
    <string name="creat_detail_offer_conditions">Condiciones de Viaje</string>
    <string name="creat_detail_offer_see_map">Visualiza el mapa</string>
    <string name="creat_detail_offer_bttn">Acuerdo</string>
    <string name="creat_detail_offer_no_conditions">No hay Condiciones de viaje</string>


    <string name="IdClient">718670393638-rqlbu93nj6da86mvqvkoqh41ro6cs5oh.apps.googleusercontent.com</string>
    <string name="mapsApi">AIzaSyB5VehnIt36BvcXO4VuFCAIUMxKq4MdoRU</string>
    <string name="keyMessag2">AAAAp!QX8SY:APA91bEaBh3YUYLtyPjwABa37KFomH2_nMNM6ny3PuJkVBfhqxdrp1bsCg4HZlB7SS3kMTu1jDA_st_k2R9F41h_XVTe9Xy0EcUIeso3gHyiL9szZkb652quMbWhQkjTw0GvtblZONw-</string>
    <string name="keyMessag">AIzaSyCPX_cbwOc6WH7Er_RgzSZ9brwAY3X2uBQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">Hola, Bienvenido!</string>
    <string name="todo">TODO</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="mis_ofertas">Mis ofertas</string>
    <string name="name">Name</string>
    <string name="de_a">DE - A</string>
    <string name="seats">Seats</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="estado">Estado</string>
    <string name="fecha">Fecha</string>
    <string name="modificar_texto">Modificar texto</string>


</resources>