<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu" />
    <item
        android:id="@+id/viajes"
        android:enabled="true"
        android:icon="@drawable/people_in_car"
        android:title="@string/viajes" />
    <item
        android:id="@+id/solicitud"
        android:enabled="true"
        android:icon="@drawable/request"
        android:title="@string/solicitud" />
    <item
        android:id="@+id/chats"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/chats" />
    <item
        android:id="@+id/perfil"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/perfil" />


</menu>