<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".CreateRequestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_create_request"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/grey"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/Requests_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ExpandedAppBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_request"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_master"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_create_request">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/txv_subtitle_startpoint"
                    style="@style/FontsLittle_MediumText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/creat_offer_startpoint" />


                <TextView
                    android:id="@+id/txv_from_travel"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/esquinas_redondeadas_bttn"
                    android:gravity="center"
                    android:text="@string/creat_offer_click_star"
                    android:textColor="@color/letra_02" />


                <TextView
                    android:id="@+id/txv_subtitle_endpoint"
                    style="@style/FontsLittle_MediumText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/creat_offer_endpoint" />

                <TextView
                    android:id="@+id/txv_to_travel"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/esquinas_redondeadas_bttn"
                    android:gravity="center"
                    android:text="@string/creat_offer_click_end"
                    android:textColor="@color/letra_02" />

                <LinearLayout
                    android:id="@+id/contenedor_seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txv_subtitle_seats"
                        style="@style/FontsLittle_MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/creat_offer_seats" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imv_seat"
                            android:layout_width="32dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_seat" />

                        <EditText
                            android:id="@+id/edtText_seat"
                            style="@style/FontsLittle_MediumText"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:cursorVisible="false"
                            android:hint="@string/creat_offer_number_hint_seats"
                            android:inputType="number"
                            android:outlineAmbientShadowColor="@color/green"
                            android:textAlignment="center"
                            android:textColor="@color/letra_02"
                            android:textColorHint="@color/letra_02"
                            tools:ignore="TouchTargetSizeCheck" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contenedor_fechas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txv_subtitle_date"
                        style="@style/FontsLittle_MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/creat_offer_date" />

                    <TextView
                        android:id="@+id/txv_request_date"
                        style="@style/FontsLittleText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/esquinas_redondeadas_bttn"
                        android:gravity="center"
                        android:text="@string/creat_offer_getDate"
                        android:textColor="@color/letra_02" />

                    <TextView
                        android:id="@+id/txv_subtitle_hour"
                        style="@style/FontsLittle_MediumText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/creat_offer_hour" />

                    <TextView
                        android:id="@+id/txv_request_hour"
                        style="@style/FontsLittleText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/esquinas_redondeadas_bttn"
                        android:gravity="center"
                        android:text="@string/creat_offer_getHour"
                        android:textColor="@color/letra_02" />

                </LinearLayout>



                <Button
                    android:id="@+id/btn_post_request"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="290dp"
                    android:layout_height="63dp"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/berlin_sans_demi_bold"
                    android:onClick="loginUser"
                    android:text="@string/creat_offer_post_offer"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:backgroundTint="@color/bttn_01"
                    app:cornerRadius="22dp"
                    app:elevation="50dp"
                    app:rippleColor="@color/green_main" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>