<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_notification"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="6dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:id="@+id/contenedor_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/bttn_01"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/ly_photoName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_user_request_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_drawable"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:srcCompat="@drawable/ic_user"
                    app:strokeColor="@color/green_main" />

                <TextView
                    android:id="@+id/request_name"
                    style="@style/FontsMediumLittleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/ly_photoName"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_request_startArriveP"
                    style="@style/FontsLittleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/de_a"
                    android:textAlignment="inherit"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txv_request_date"
                    style="@style/FontsVeryLittleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    app:drawableLeftCompat="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/txv_request_hour"
                    style="@style/FontsVeryLittleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:text="@string/hour"
                    android:textColor="@color/white"
                    app:drawableLeftCompat="@drawable/ic_hour" />

                <TextView
                    android:id="@+id/txv_request_seats"
                    style="@style/FontsVeryLittleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:text="@string/seats"
                    android:textColor="@color/white"
                    app:drawableLeftCompat="@drawable/ic_seat" />


            </LinearLayout>

            <ImageButton
                android:id="@+id/imgbttn_request_three_point"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_points_edit"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>