<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.activity.CreateOfferActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_create_offer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:liftOnScroll="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/grey"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/Crea_tu_oferta"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ExpandedAppBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_offer"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_create_offer">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/back_master"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/txv_subtitle_desc"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/creat_offer_desc" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_desc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start|top"
                    android:textColorHint="@color/black02"
                    app:boxStrokeColor="@color/green_main"
                    app:counterEnabled="true"
                    app:counterMaxLength="120"
                    app:hintTextColor="@color/black02">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mydesc"
                        style="@style/FontsLittleText"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="top"
                        android:gravity="top"
                        android:hint="@string/creat_offer_hint_desc"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:textAlignment="inherit"
                        android:textColor="@color/letra_02"
                        android:textCursorDrawable="@color/green_main" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txv_subtitle_startpoint"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/creat_offer_startpoint" />


                <TextView
                    android:id="@+id/txv_from_travel"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/esquinas_redondeadas_bttn"
                    android:gravity="center"
                    android:text="@string/creat_offer_click_star"
                    android:textColor="@color/letra_02" />


                <TextView
                    android:id="@+id/txv_subtitle_endpoint"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/creat_offer_endpoint" />

                <TextView
                    android:id="@+id/txv_to_travel"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/esquinas_redondeadas_bttn"
                    android:gravity="center"
                    android:text="@string/creat_offer_click_end"
                    android:textColor="@color/letra_02" />

                <TextView
                    android:id="@+id/txv_subtitle_see_map"
                    style="@style/FontsLittleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/creat_offer_see_map" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="20dp"
                    app:strokeColor="@color/green_main">

                    <fragment

                        android:id="@+id/fragment_map"
                        android:name="com.uniquindio.moviuq.provider.services.maps.myMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:context=".MapsActivity" />

                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="hola" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>